; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/dmusic/extr_port.c_unsafe_impl_from_IDirectMusicDownloadedInstrument.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/dmusic/extr_port.c_unsafe_impl_from_IDirectMusicDownloadedInstrument.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@DirectMusicDownloadedInstrument_Vtbl = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_4__*)* @unsafe_impl_from_IDirectMusicDownloadedInstrument to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @unsafe_impl_from_IDirectMusicDownloadedInstrument(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %5 = icmp ne %struct.TYPE_4__* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %16

7:                                                ; preds = %1
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = icmp eq i32* %10, @DirectMusicDownloadedInstrument_Vtbl
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %15 = call i32* @impl_from_IDirectMusicDownloadedInstrument(%struct.TYPE_4__* %14)
  store i32* %15, i32** %2, align 8
  br label %16

16:                                               ; preds = %7, %6
  %17 = load i32*, i32** %2, align 8
  ret i32* %17
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @impl_from_IDirectMusicDownloadedInstrument(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
